--- a/.github/workflows/stats.yml
+++ b/.github/workflows/stats.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Code_Stats
         uses: jojo2357/CodeStats@LATEST
         with:
-          root_dir: 'com/github/jojo2357'
+          root_dir: 'src/main'
 
       - name: Git Auto Commit
         uses: stefanzweifel/git-auto-commit-action@v4.10.0
